<resources>
  <string name="app_name_debug" translatable="false">تفوق</string>
  <string name="app_name" translatable="false">تفوق</string>

  <!-- General Strings -->
  <string name="hide">Hide</string>
  <string name="connection_error">Connection Error</string>
  <string name="no_internet">No internet connection please try again later</string>
  <string name="retry">Retry</string>
  <string name="cancel">Cancel</string>
  <string name="some_error">Some error occurred, try again later</string>
  <string name="list_no_result">Sorry, There are no results here!</string>

  <!-- Home -->
  <string name="home">Home</string>
  <string name="search">البحث عن المعلمين , المجموعات .. وغيرها</string>
  <string name="account">Account</string>

  <!-- Tutorial -->
  <string name="tutorial">Tutorial</string>

  <!-- Intro -->
  <string name="log_in_sign_up">Log In / Sign Up</string>

  <!-- Log In -->
  <string name="log_in">Log In</string>
  <string name="email">Email Address</string>
  <string name="password">Password</string>
  <string name="forgot_your_password">Forgot your password?</string>
  <string name="not_have_account">Don\'t have an account?</string>
  <string name="empty_email">Please enter your email address</string>
  <string name="invalid_email">Please enter valid email address</string>
  <string name="empty_password">Please enter your password</string>

  <!-- Sign Up -->
  <string name="sign_up">Sign Up</string>

  <!-- Account -->
  <string name="log_out">Log Out</string>
  <string name="log_out_hint">Are you sure you want to log out?</string>
  <string name="skip">Skip</string>
  <string name="explore_app">Need to explore app features?</string>
  <string name="continue_as_guest">Continue as Guest</string>
  <string name="google_api_key">Continue as Guest</string>
  <string name="send">Send</string>
  <string name="contact_us">Contact us</string>
  <string name="or">او عن طريق</string>
  <string name="register_name">اكتب اسمك</string>
  <string name="register_phone">أدخل رقم الهاتف الجوال</string>
  <string name="email_hint">أدخل البريد الإلكتروني</string>
  <string name="password_hint_confirm">قم بتأكيد كلمة المرور</string>
  <string name="agree_to">أوافق على</string>
  <string name="have_account">لدي حساب</string>
  <string name="privacy">سياسة الخصوصية</string>
  <string name="terms_auth">شروط الاستخدام |</string>
  <string name="confirm_header_text">تأكيد حسابك</string>
  <string name="confirm_resend">إعادة ارسال</string>
  <string name="confirm_header">أدخل كود التفعيل المرسل لك على بريدك الإلكتروني</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rememeber">تذكرت كلمة المرور</string>
  <string name="change_title">كلمة مرور جديدة</string>
  <string name="change_body">من فضللك قم بكتابة كلمة مرور جديدة مع التأكد من عدم علم اي شخص بها</string>
  <string name="old_password">كلمة المرور القديمة</string>
  <string name="confirm">تأكيد</string>
    <string name="countries_title">أختر البلد , لتحديد المنهج الدراسي لك</string>
  <string name="soon">قريبا</string>
  <string name="school_grade_title">اختر المرحلة الدراسية</string>
  <string name="school_level_title">اختر الصف الدراسي</string>
    <string name="suggested_teachers">معلمين مقترحين</string>
  <string name="all">عرض الجميع</string>
  <string name="suggested_groups">مجموعات مقترحة</string>
  <string name="test">إختبر نفسك</string>
    <string name="start_test">بدأ اختبار</string>
  <string name="my_tests">رؤية اختباراتي</string>
    <string name="stars">عرض أعلي التقيمات</string>
  <string name="expire_test">يمكنك استخدام الاختبارات مجانا لمدة 48 ساعة</string>
  <string name="subscribe">اشترك الان</string>
  <string name="profile">بياناتي الشخصية</string>
  <string name="my_groups">مجموعاتي</string>
  <string name="lessons">الحصص التعويضية</string>
  <string name="teachers">المعلمين</string>
  <string name="menu_tests">اختبارات</string>
  <string name="teacher_info">معلومات عن المعلم</string>
  <string name="teacher_groups">المجموعات العامه التي يقدمها</string>
  <string name="private_group_request">طلب مجموعة خاصة</string>
  <string name="students_review">أراء الطلبة في المعلم</string>
  <string name="rate_teacher">تقيم المعلم</string>
  <string name="rate">تقيم</string>
  <string name="comment">من فضلك قم بأضافة تعليق</string>
    <string name="terms">الشروط والاحكام</string>
  <string name="suggestions">الشكاوي والاقتراحات</string>
  <string name="about">عن التطبيق</string>
  <string name="share_app">مشاركة التطبيق</string>
  <string name="rate_app">تقيم التطبيق</string>
    <string name="message">الرسالة</string>
    <string name="notifications">Notifications</string>
    <string name="ask_group_header_info">تفاصيل ومميزات المجموعة الخاصة</string>
  <string name="ask_group_info1">شرح مسبط للمنهج</string>
  <string name="ask_group_info2">يقوم المعلم يمتابعتك انت فقط لا يوجد طلاب أخرون معك</string>
  <string name="ask_group_info3">يمكنك اختيار عدد الحصص وتحديد مواعيدها المناسبة لك</string>
  <string name="session_price">سعر الحصة الواحدة الخاصة</string>
  <string name="price_info">السعر شامل الضريبة ويتم دفع تكلفة حصص الشهر جميعا مرة واحده</string>
  <string name="session_time_header">تحديد وقت الحصة</string>
  <string name="day">اليوم</string>
  <string name="month">الشهر</string>
  <string name="year">السنة</string>
  <string name="add">إضافة</string>
  <string name="session_count">عدد الحصص المطلوبة</string>
  <string name="one_session_price">سعر الحصة الواحدة</string>
  <string name="total">السعر الكلي</string>
  <string name="send_to_teacher">ارسال الطلب للمعلم</string>
  <string name="sessions_dates">مواعيد الحصص من كل أسبوع</string>
  <string name="group_join">طلب أنضمام للمجموعة</string>
  <string name="public_groups">مجموعات عامة</string>
  <string name="private_groups">مجموعات خاصة</string>
  <string name="current_groups">مجموعات حالية</string>
  <string name="show_details">عرض التفاصيل</string>
  <string name="lesson_now">تجري حاليا</string>
  <string name="watch">مشاهدة</string>
  <string name="next_sessions">الحصص القادمة</string>
  <string name="next_sessions_notifications">سيتم ارسالك اشعار لك عند بداية الحصة</string>
  <string name="previous_sessions">الحصص السابقة</string>
    <string name="change_password">تغير كلمة المرور</string>
  <string name="change_country">تغير الدولة</string>
  <string name="change_study">تغير بياناتي الدراسيه</string>
  <string name="save">حفظ</string>
  <string name="compensation_sessions">الحصص التعويضية</string>
    <string name="groups">مجموعات</string>
    <string name="choose_subjects">اختر المادة</string>
  <string name="choose_subjects_units">حدد الدروس والوحدات</string>
  <string name="all_materials">عمل اختبار علي جميع الوحدات</string>
  <string name="choose_exam_level">من فضلك قم بأختيار مستوي الاختبار</string>
  <string name="easy">مستوي سهل</string>
  <string name="easy_body">مستوي سهل , سيكون الاختبار في مستوي الطالب المتوسط ولا يوجد أسئلة صعبة</string>
  <string name="exam_middle">مستوي متوسط</string>
  <string name="middle_body">مستوي متوسط , سيكون الاختبار في مستوي الطالب فوق المتوسط ويحتوي بعض الأسئلة الصعبة</string>
  <string name="exam_hard">مستوي صعب</string>
  <string name="hard_body">مستوي صعب , سيكون الاختبار في مستوي الطالب المتفوق ومعظمة أسئلة صعبة</string>
  <string name="exam_warning_title">برجاء الانتباه</string>
  <string name="exam_warning_body">عند البدء في الاختبار لا يمكنك الخروج من التطبيق او الرجوع الي تصفح التطبيق وفي حالة الرجوع او الخروج من التطبيق يتم اغلاق الاختبار واعتماد الدرجه بناء علي ما تم حله من الاختبار</string>
  <string name="btn_start_test">بدأ الاختبار</string>
  <string name="your_grade">درجتك هي</string>
  <string name="do_more_tests">عمل اختبار أخر</string>
  <string name="go_home">الذهاب للرئيسية</string>
    <string name="register_name_teacher">اكتب اسمك المستعار</string>
  <string name="teacher_test_intro">اختبار قبول المعلم</string>
  <string name="teacher_test_intro2">يتم إجراء هذا الاختبار للتأكد من كفاءتك المهنية</string>
  <string name="teacher_test_intro3">الاختبار عبارة عن 30 سؤال ,ويشترط حصولك علي 25 درجة علي الأقل من أصل 30 درجة للنجاح واجتياز اختبار القبول وإتمام عملية التسجيل كما أن المدة الزمنية للاختبار 25 دقيقة</string>
  <string name="teacher_test_intro4">برجاء الانتباه</string>
  <string name="teacher_test_intro5">عند البدء فى الاختبار لا يمكنك الخروج من التطبيق وفي حالة الرجوع أو الخروج من التطبيق يتم إغلاق الاختبار واعتماد الدرجه بناء على ما تم حله من الاختبار</string>
  <string name="teacher_payment_header">لتتمكن من استخدام التطبيق كمعلم</string>
  <string name="pay_amount">دفع المبلغ</string>
  <string name="menu_more">المزيد</string>
  <string name="today_sessions">حصص اليوم</string>
  <string name="start_session">بدأ الحصة</string>
  <string name="students_count">عدد الطلبة :</string>
  <string name="profit">العائد الربحي</string>
  <string name="students_in_group">الطلبة المشتركين في المجموعة</string>
  <string name="total_profit">العائد الكلي</string>
  <string name="tv_app_percentage">نسبة التطبيق</string>
  <string name="tv_clean_profit">العائد الصافي</string>
  <string name="reasons_header">اختر سبب الشكوي</string>
  <string name="reason_hint">أكتب تفاصيل لتقديمها للأدارة</string>
  <string name="reason_image_hint">ارسال صورة كدليل ( اختياري )</string>
  <string name="registered_groups">المجموعات العامة المشترك بها معي</string>
  <string name="registered_groups_private">المجموعات الخاصة المشترك بها معي</string>
  <string name="not_registered_groups_private">الطالب ليس مشترك مع بمجموعات خاصة</string>
  <string name="group_name">اسم المجموعة</string>
  <string name="group_desc">إضافة شرح وتفاصيل عن المجموعة</string>
  <string name="group_type">نوع المجموعة</string>
  <string name="male">ذكور</string>
  <string name="female">إناث</string>
  <string name="mix">مختلط</string>
  <string name="add_session_time">أضف الحصص ومواعيدها</string>
  <string name="add_group">أضافة المجموعة</string>
  <string name="accept">قبول</string>
  <string name="reject">رفض</string>
    <string name="public_groups_requests">طلبات مجموعات عامة</string>
  <string name="private_groups_requests">طلبات مجموعات خاصة</string>
  <string name="request_warning">هناك تعارض مع المواعيد برجاء اختيار معاد مناسب</string>
    <string name="student">طالب</string>
  <string name="teacher">معلم</string>
  <string name="not_match_password">كلمتا المرور غير متطابقتان</string>
  <string name="empty_terms">يرجى الموافقه على الشروط والاحكام</string>
  <string name="empty_image">يرجى اختيار الصورة</string>
    <string name="continue_register_title">هل تريد استكمال البيانات ؟</string>
  <string name="yes">نعم</string>
    <string name="continue_register_body">يمكنك استكمال انشاء حسابك عند اخر خطوة</string>
  <string name="active">تفعيل الحساب</string>
  <string name="public_group">مجموعة عامة</string>
  <string name="private_group">مجموعة خاصة</string>
  <string name="both">مجموعة مختلطة</string>
  <string name="female_group">مجموعة اناث</string>
  <string name="male_group">مجموعة ذكور</string>
  <string name="social">مواقع التواصل الاجتماعي</string>
    <string name="rate_warning">يرجى ادخال التقييم اولا</string>

</resources>