<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/nav_home"
  app:startDestination="@id/home_fragment">

  <fragment
    android:id="@+id/home_fragment"
    android:name="com.structure.base_mvvm.presentation.home.HomeFragment"
    android:label="@string/home"
    tools:layout="@layout/fragment_home">

    <action
      android:id="@+id/actionToTeacherProfileFragment"
      app:destination="@id/teacherProfileFragment"
      app:enterAnim="@anim/anim_slide_in_right"
      app:exitAnim="@anim/anim_slide_out_left"
      app:popEnterAnim="@anim/anim_slide_in_left"
      app:popExitAnim="@anim/anim_slide_out_right" />

  </fragment>
  <fragment
    android:id="@+id/teacherProfileFragment"
    android:name="com.structure.base_mvvm.presentation.teachers.TeacherProfileFragment"
    android:label="TeacherProfileFragment">
    <action
      android:id="@+id/actionToReviewsFragment"
      app:destination="@id/reviewsFragment"
      app:enterAnim="@anim/anim_slide_in_right"
      app:exitAnim="@anim/anim_slide_out_left"
      app:popEnterAnim="@anim/anim_slide_in_left"
      app:popExitAnim="@anim/anim_slide_out_right" />
  </fragment>
  <fragment
    android:id="@+id/reviewsFragment"
    android:name="com.structure.base_mvvm.presentation.reviews.ReviewsFragment"
    android:label="ReviewsFragment">
    <action
      android:id="@+id/action_reviewsFragment_to_review_dialog_comment"
      app:destination="@id/review_dialog_comment" />
  </fragment>
  <fragment
    android:id="@+id/teachersFragment"
    android:name="com.structure.base_mvvm.presentation.teachers.TeachersFragment"
    android:label="TeachersFragment" />
  <fragment
    android:id="@+id/testsFragment"
    android:name="com.structure.base_mvvm.presentation.tests.TestsFragment"
    android:label="TestsFragment" />
  <fragment
    android:id="@+id/accountFragment"
    android:name="com.structure.base_mvvm.presentation.account.AccountFragment"
    android:label="AccountFragment" />
  <fragment
    android:id="@+id/about_fragment"
    android:name="com.structure.base_mvvm.presentation.about.AboutFragment"
    android:label="AboutFragment" />
  <fragment
    android:id="@+id/contact_fragment"
    android:name="com.structure.base_mvvm.presentation.contactUs.ContactUsFragment"
    android:label="@string/contact_us">
    <argument
      android:name="type"
      app:argType="string"
      android:defaultValue="contact_us"/>
  </fragment>
  <fragment
    android:id="@+id/suggestions_fragment"
    android:name="com.structure.base_mvvm.presentation.contactUs.SuggestionsFragment"
    android:label="@string/suggestions">
    <argument
      android:name="type"
      app:argType="string"
      android:defaultValue="complaint"/>
  </fragment>
  <dialog
    android:id="@+id/review_dialog_comment"
    android:name="com.structure.base_mvvm.presentation.reviews.ReviewDialog"
    tools:layout="@layout/review_dialog">
    <argument
      android:name="teacherId"
      app:argType="integer" />
  </dialog>
  <fragment
    android:id="@+id/privacy_fragment"
    android:name="com.structure.base_mvvm.presentation.privacy.PrivacyFragment"
    android:label="@string/privacy" />
  <fragment
    android:id="@+id/terms_fragment"
    android:name="com.structure.base_mvvm.presentation.terms.TermsFragment"
    android:label="@string/terms" />

</navigation>