<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <import type="com.structure.base_mvvm.domain.utils.Constants" />

    <variable
      name="viewModel"
      type="com.structure.base_mvvm.presentation.teachers.addGroup.viewModels.AddGroupViewModel" />
  </data>

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_group_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen14"
        android:layout_marginTop="@dimen/dimen18"
        android:layout_marginEnd="@dimen/dimen14"
        android:hint="@string/group_name"
        android:textColorHint="@color/black"
        app:helperTextTextColor="@color/black"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="text"
          android:textAppearance="@style/TextAppearance.AppCompat.Small"
          android:textColor="@color/colorPrimaryDark"
          android:textColorHint="@color/black" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_group_desc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen14"
        android:layout_marginTop="@dimen/dimen6"
        android:layout_marginEnd="@dimen/dimen14"
        android:hint="@string/group_desc"
        android:textColorHint="@color/black"
        app:helperTextTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_group_name">

        <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="@dimen/dimen100"
          android:gravity="top"
          android:inputType="textMultiLine"
          android:textAppearance="@style/TextAppearance.AppCompat.Small"
          android:textColor="@color/colorPrimaryDark"
          android:textColorHint="@color/black" />
      </com.google.android.material.textfield.TextInputLayout>


      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_group_type"
        style="@style/TextMediumFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen16"
        android:layout_marginTop="@dimen/dimen25"
        android:layout_marginEnd="@dimen/dimen16"
        android:text="@string/group_type"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_group_desc" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_male"
        style="@style/TextMediumFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/male"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:backgroundTint="@color/white" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_female"
        style="@style/TextMediumFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/female"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:backgroundTint="@color/white" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_mix"
        style="@style/TextMediumFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/mix"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:backgroundTint="@color/white" />

      <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen10"
        app:constraint_referenced_ids="btn_male,btn_female,btn_mix"
        app:flow_horizontalStyle="spread_inside"
        app:flow_wrapMode="chain"
        app:layout_constraintTop_toBottomOf="@id/tv_group_type" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_session_time_header"
        style="@style/TextMediumFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen16"
        android:layout_marginTop="@dimen/dimen25"
        android:layout_marginEnd="@dimen/dimen16"
        android:text="@string/add_session_time"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flow" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_day"
        style="@style/TextMediumFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/day"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:backgroundTint="@color/white"
        app:icon="@drawable/ic_arrow_up_down"
        app:iconGravity="start"
        app:iconTint="@color/colorPrimaryDark" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_month"
        style="@style/TextMediumFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/month"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:backgroundTint="@color/white"
        app:icon="@drawable/ic_arrow_up_down"
        app:iconGravity="start"
        app:iconTint="@color/colorPrimaryDark" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_year"
        style="@style/TextMediumFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/year"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:backgroundTint="@color/white"
        app:icon="@drawable/ic_arrow_up_down"
        app:iconGravity="start"
        app:iconTint="@color/colorPrimaryDark" />

      <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen10"
        app:constraint_referenced_ids="btn_day,btn_month,btn_year"
        app:flow_horizontalStyle="spread_inside"
        app:flow_wrapMode="chain"
        app:layout_constraintTop_toBottomOf="@id/tv_session_time_header" />

      <androidx.cardview.widget.CardView
        android:id="@+id/card_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dimen6"
        app:cardElevation="@dimen/dimen2"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">

          <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen10"
            android:text="12"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/start_time_scope"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

          <com.google.android.material.textview.MaterialTextView
            android:id="@+id/start_time_scope"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dimen10"
            android:background="@drawable/corner_view_blue_border"
            android:drawableEnd="@drawable/ic_arrow_up_down"
            android:drawablePadding="@dimen/dimen6"
            android:drawableTint="@color/black"
            android:gravity="center"
            android:text="م"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/time"
            app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
        android:id="@+id/card_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dimen6"
        app:cardElevation="@dimen/dimen2"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">

          <TextView
            android:id="@+id/end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen10"
            android:text="12"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/end_time_scope"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

          <com.google.android.material.textview.MaterialTextView
            android:id="@+id/end_time_scope"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dimen10"
            android:background="@drawable/corner_view_blue_border"
            android:drawableEnd="@drawable/ic_arrow_up_down"
            android:drawablePadding="@dimen/dimen6"
            android:drawableTint="@color/black"
            android:gravity="center"
            android:text="م"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/end_time"
            app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
      </androidx.cardview.widget.CardView>

      <com.google.android.material.button.MaterialButton
        android:id="@+id/add_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_accent"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:backgroundTint="@null" />

      <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen10"
        app:constraint_referenced_ids="card_start_time,card_end_time,add_time"
        app:flow_horizontalGap="@dimen/dimen6"
        app:flow_horizontalStyle="spread_inside"
        app:flow_wrapMode="chain"
        app:layout_constraintTop_toBottomOf="@id/flow3" />

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_sessions_times"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen10"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/flow2"
        app:spanCount="2"
        tools:itemCount="4"
        tools:listitem="@layout/item_session_time" />

      <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen10"
        android:background="@drawable/btn_accent"
        android:text="@string/add_group"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rc_sessions_times" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>
</layout>