<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="app.grand.tafwak.presentation.teachers.acceptanceTest.viewModels.AcceptanceTestViewModel" />
  </data>

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <androidx.cardview.widget.CardView
        android:id="@+id/card_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen16"
        app:cardCornerRadius="@dimen/dimen8"
        app:cardElevation="@dimen/dimen4"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_teacher_intro_test1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen12"
            android:src="@drawable/ic_teacher_intro_test1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

          <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/teacher_test_intro"
            style="@style/TextBoldFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen10"
            android:layout_marginTop="@dimen/dimen16"
            android:text="@string/teacher_test_intro"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_teacher_intro_test1" />

          <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/teacher_test_intro2"
            style="@style/TextMediumFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen10"
            android:layout_marginTop="@dimen/dimen12"
            android:layout_marginEnd="@dimen/dimen10"
            android:text="@string/teacher_test_intro2"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/darkGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/teacher_test_intro" />

          <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/teacher_test_intro3"
            style="@style/TextMediumFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen10"
            android:layout_marginTop="@dimen/dimen12"
            android:layout_marginEnd="@dimen/dimen10"
            android:text="@string/teacher_test_intro3"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/teacher_test_intro2" />

          <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_teacher_test_intro2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen12"
            android:src="@drawable/ic_teacher_test_intro2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teacher_test_intro3" />

          <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/teacher_test_intro4"
            style="@style/TextBoldFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen10"
            android:layout_marginTop="@dimen/dimen16"
            android:text="@string/teacher_test_intro4"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_teacher_test_intro2" />

          <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/teacher_test_intro5"
            style="@style/TextMediumFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen10"
            android:layout_marginTop="@dimen/dimen12"
            android:layout_marginEnd="@dimen/dimen10"
            android:layout_marginBottom="@dimen/dimen12"
            android:text="@string/teacher_test_intro5"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/teacher_test_intro4" />

        </androidx.constraintlayout.widget.ConstraintLayout>
      </androidx.cardview.widget.CardView>

      <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen16"
        android:layout_marginTop="@dimen/dimen25"
        android:layout_marginEnd="@dimen/dimen16"
        android:background="@drawable/btn_accent"
        android:text="@string/start_test"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/card_info" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>
</layout>